fix the width unuse

--- a/todo/src/main/res/layout/todo_item.xml
+++ b/todo/src/main/res/layout/todo_item.xml
@@ -1,27 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="56dp"
-    android:background="#799794"
-    android:gravity="center_vertical"
-    android:orientation="horizontal"
-    android:paddingLeft="8dp"
-    >
+  android:layout_width="match_parent"
+  android:layout_height="wrap_content"
+  android:background="#eaeaea"
+  android:minHeight="56dp"
+  android:gravity="center_vertical"
+  android:orientation="horizontal"
+  android:paddingLeft="8dp">
+
   <CheckBox
-      android:id="@+id/todo_checkbox"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:checked="false"
-      android:focusable="false"
-      />
+    android:id="@+id/todo_checkbox"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:checked="false"
+    android:layout_weight="0"
+    android:focusable="false" />
+
   <TextView
-      android:id="@+id/todo_title"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:ellipsize="end"
-      android:gravity="center|start"
-      android:lines="1"
-      android:padding="8dp"
-      />
+    android:id="@+id/todo_title"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:layout_weight="1"
+    android:ellipsize="end"
+    android:gravity="center|start"
+    android:lines="1"
+    android:padding="8dp" />
+
 
 </LinearLayout>
