--- a/todo/src/main/res/layout/content_main.xml
+++ b/todo/src/main/res/layout/content_main.xml
@@ -11,6 +11,7 @@
     >
   <android.support.v7.widget.RecyclerView
       android:id="@+id/todo_list"
+      android:background="#e4e4e4"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       />
