--- a/todo/src/main/res/layout/content_main.xml
+++ b/todo/src/main/res/layout/content_main.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  app:layout_behavior="@string/appbar_scrolling_view_behavior"
+  tools:context="com.xander.todo.MainActivity"
+  tools:showIn="@layout/activity_main">
+
+  <android.support.v4.view.ViewPager
+    android:id="@+id/main_viewpager"
+    android:background="#e2e2e2"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.xander.todo.MainActivity"
-    tools:showIn="@layout/activity_main"
-    >
-  <android.support.v7.widget.RecyclerView
-      android:id="@+id/todo_list"
-      android:background="#e4e4e4"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      />
+    android:layout_height="match_parent" />
 
 </android.support.constraint.ConstraintLayout>
