--- a/todo/src/main/res/menu/create_menu.xml
+++ b/todo/src/main/res/menu/create_menu.xml
@@ -4,7 +4,6 @@
 
   <item
       android:id="@+id/save"
-      android:icon="@android:drawable/ic_menu_save"
-      android:title="save"
+      android:title="@string/menu_save"
       app:showAsAction="always"/>
 </menu>
