--- a/todo/src/main/res/menu/main_menu.xml
+++ b/todo/src/main/res/menu/main_menu.xml
@@ -4,7 +4,6 @@
 
   <item
       android:id="@+id/create"
-      android:icon="@android:drawable/ic_menu_add"
-      android:title="create"
+      android:title="@string/menu_create"
       app:showAsAction="ifRoom|withText"/>
 </menu>
