--- a/todo/src/main/res/menu/create_menu.xml
+++ b/todo/src/main/res/menu/create_menu.xml
@@ -3,6 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
   <item
+      android:id="@+id/mark_done"
+      android:title="@string/menu_save"
+      app:showAsAction="always"/>
+  <item
       android:id="@+id/save"
       android:title="@string/menu_save"
       app:showAsAction="always"/>
