--- a/todo/src/main/res/layout/activity_create_to_do.xml
+++ b/todo/src/main/res/layout/activity_create_to_do.xml
@@ -22,32 +22,52 @@
         />
 
   </android.support.design.widget.AppBarLayout>
-  <android.support.constraint.ConstraintLayout
-      android:paddingTop="?attr/actionBarSize"
+  <LinearLayout
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
+      android:layout_height="match_parent"
+      android:layout_marginTop="?attr/actionBarSize"
+      android:orientation="vertical"
+      android:padding="8dp"
       app:layout_behavior="@string/appbar_scrolling_view_behavior"
       >
-    <LinearLayout
+
+    <android.support.design.widget.TextInputLayout
+
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:layout_height="wrap_content"
         >
-      <EditText
+
+      <android.support.design.widget.TextInputEditText
           android:id="@+id/todo_title"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
+          android:hint="Title"
+          android:textSize="20sp"
           />
-      <View
-          android:layout_width="match_parent"
-          android:layout_height="2px"
-          android:background="#40000000"
-          />
-      <EditText
+
+    </android.support.design.widget.TextInputLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2px"
+        android:background="#40000000"
+        />
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="3dp"
+        >
+
+      <android.support.design.widget.TextInputEditText
           android:id="@+id/todo_content"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
+          android:hint="Content"
+          android:textSize="18sp"
           />
-    </LinearLayout>
-  </android.support.constraint.ConstraintLayout>
+
+    </android.support.design.widget.TextInputLayout>
+
+  </LinearLayout>
 </android.support.constraint.ConstraintLayout>
