--- a/todo/src/main/res/menu/create_menu.xml
+++ b/todo/src/main/res/menu/create_menu.xml
@@ -4,10 +4,16 @@
 
   <item
       android:id="@+id/mark_done"
-      android:title="@string/menu_save"
+      android:title="@string/menu_mark_done"
       app:showAsAction="always"/>
   <item
       android:id="@+id/save"
       android:title="@string/menu_save"
       app:showAsAction="always"/>
+
+  <item
+      android:id="@+id/delete"
+      android:title="@string/menu_save"
+      app:showAsAction="always"/>
+
 </menu>
