--- a/todo/src/main/res/menu/main_menu.xml
+++ b/todo/src/main/res/menu/main_menu.xml
@@ -1,9 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto">
 
   <item
-      android:id="@+id/create"
-      android:title="@string/menu_create"
-      app:showAsAction="ifRoom|withText"/>
+    android:id="@+id/create"
+    android:title="@string/menu_create"
+    app:showAsAction="ifRoom"/>
+
+  <item
+    android:id="@+id/select_all"
+    android:title="@string/menu_select_all"
+    android:visible="false"
+    app:showAsAction="ifRoom"/>
+
+  <item
+    android:id="@+id/mark_done"
+    android:title="@string/menu_mark_done"
+    android:visible="false"
+    app:showAsAction="ifRoom"/>
+
 </menu>
